# Objectify-HTML

./: .travis.yml  LICENSE  README.md  SPECIFICATION.md
OutputDir/: index.html
OutputDir/FolderA/: a.html
Tests/: .build  firstobject.ohtml  index.html  secondobject.ohtml
Tests/FolderA/: a.html
javascript/: .build  example.html  objectify.js
objectify-html/: .build  Cargo.toml  Testing.html  file.ohtml  file2.ohtml  test.html
objectify-html/src/: main.rs
rust/: Cargo.toml  Testing.html  file.ohtml
rust/src/: lib.rs  main.rs
scripts/: BaseRecurse.sh  READEME.md
